# LCFEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  dependencies.json  todo.md  vcpkg.json
RenderEngine/: CMakeLists.txt  CmakeLists.txt  dependencies.json
RenderEngine/include/: Material.h  Mesh.h  Model.h  ModelLoader.h  RenderWindow.h  Renderer.h
RenderEngine/include/RHI/: Context.h  GPUBuffer.h  RenderExchangeInfo.h  RenderTarget.h
RenderEngine/include/ShaderCore/: Shader.h  ShaderCompiler.h  ShaderDefs.h  ShaderIncluder.h  ShaderProgram.h  ShaderProgramResource.h  ShaderResource.h
RenderEngine/include/Vulkan/: BindlessPoolManager.h  PerFramePoolManager.h  PersistentPoolManager.h  VulkanAttachment.h  VulkanBuffer.h  VulkanBuffer2.h  VulkanBufferController.h  VulkanBufferGroupObject.h  VulkanBufferObject.h  VulkanBufferObject2.h  VulkanBufferObjectGroup.h  VulkanBufferProxy.h  VulkanBufferResource.h  VulkanBufferWriter.h  VulkanCommandBuffer.h  VulkanCommandBufferObject.h  VulkanContext.h  VulkanDescriptorManager.h  VulkanDescriptorSet.h  VulkanDescriptorSet2.h  VulkanDescriptorSetAllocator.h  VulkanDescriptorSetAllocator2.h  VulkanDescriptorSetBinding.h  VulkanDescriptorSetLayout.h  VulkanDescriptorSetLayout2.h  VulkanDescriptorSetManager.h  VulkanDescriptorSetPrototype.h  VulkanDescriptorSetUpdater.h  VulkanDescriptorSetUpdater2.h  VulkanDescriptorWriter.h  VulkanFramebuffer.h  VulkanFramebufferObject.h  VulkanImage.h  VulkanImageObject.h  VulkanImageProxy.h  VulkanMaterial.h  VulkanMemoryAllocator.h  VulkanMesh.h  VulkanPipeline.h  VulkanPushConstant.h  (+15 more)
RenderEngine/include/common/: Context.h  GPUBuffer.h  GPUBuffer2.h  GPUResource.h  RenderTarget.h  constants.h  enum_types.h  geometry_data.h  glsl_alignment_traits.h  render_enums.h
RenderEngine/src/: Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  RenderWindow.cpp
RenderEngine/src/ShaderCore/: ShaderCompiler.cpp  ShaderIncluder.cpp  ShaderProgram.cpp  ShaderResource.cpp
RenderEngine/src/Vulkan/: BindlessPoolManager.cpp  PerFramePoolManager.cpp  PersistentPoolManager.cpp  VulkanAttachment.cpp  VulkanBuffer.cpp  VulkanBufferController.cpp  VulkanBufferObject.cpp  VulkanBufferObject2.cpp  VulkanBufferObjectGroup.cpp  VulkanBufferProxy.cpp  VulkanBufferResource.cpp  VulkanBufferWriter.cpp  VulkanCommandBuffer.cpp  VulkanCommandBufferObject.cpp  VulkanContext.cpp  VulkanDescriptorManager.cpp  VulkanDescriptorSet.cpp  VulkanDescriptorSet2.cpp  VulkanDescriptorSetAllocator.cpp  VulkanDescriptorSetAllocator2.cpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout2.cpp  VulkanDescriptorSetManager.cpp  VulkanDescriptorSetPrototype.cpp  VulkanDescriptorSetUpdater.cpp  VulkanDescriptorSetUpdater2.cpp  VulkanDescriptorWriter.cpp  VulkanFramebuffer.cpp  VulkanFramebufferObject.cpp  VulkanImage.cpp  VulkanImageObject.cpp  VulkanMaterial.cpp  VulkanMemoryAllocator.cpp  VulkanMesh.cpp  VulkanPipeline.cpp  VulkanPushConstant.cpp  VulkanRenderer.cpp  VulkanSampler.cpp  VulkanSamplerManager.cpp  VulkanShader.cpp  (+5 more)
Systems/: CMakeLists.txt  CmakeLists.txt
Systems/include/: ResourceSystem.h  TransformSystem.h
Systems/src/: ResourceSystem.cpp  TransformSystem.cpp
containers/: CMakeLists.txt  CmakeLists.txt  dependencies.json
containers/include/array/: FlexArray.h  FlexArray_Opus_4_7.h
containers/include/graph/: DirectedGraph.h
containers/include/interval/: interval_containers.h
examples/: CMakeLists.txt
examples/assets/shaders/: cull.comp  fixed_triangle.frag  fixed_triangle.vert  skybox.frag  skybox.vert  sphere_to_cube.frag  sphere_to_cube.geom  sphere_to_cube.slang  sphere_to_cube.vert  triangle.frag  triangle.vert  vertex_buffer_test.frag  vertex_buffer_test.vert
examples/coroutines_test/: CMakeLists.txt  _dependencies.json  vcpkg.json
examples/coroutines_test/include/: UserCommandContext.h  download_and_save.h  user_command_loop.h
examples/coroutines_test/src/: UserCommandContext.cpp  main.cpp  user_command_loop.cpp
examples/ecs_transform_test/: CMakeLists.txt  main.cpp
examples/ecs_transform_test/include/: OOPTransform.h  TransformSystem.h  TransformSystem2.h  tracy.h
examples/ecs_transform_test/src/: TransformSystem.cpp  main.cpp
examples/gpu_driven_benchmark/: CMakeLists.txt
examples/gpu_driven_benchmark/include/: BenchmarkScene.h  CpuIndirectRenderer.h  FrameMetricsCollector.h  GpuDrivenRenderer.h  GpuTimestampQueryPool.h  IBenchmarkRenderer.h  NaiveCpuRenderer.h  RendererSwitcher.h  VkDebugLabel.h  benchmark_types.h
examples/gpu_driven_benchmark/shaders/: benchmark_cull.comp  benchmark_indirect.frag  benchmark_indirect.vert  benchmark_naive.frag  benchmark_naive.vert
examples/gpu_driven_benchmark/src/: BenchmarkScene.cpp  CpuIndirectRenderer.cpp  FrameMetricsCollector.cpp  GpuDrivenRenderer.cpp  GpuTimestampQueryPool.cpp  NaiveCpuRenderer.cpp  RendererSwitcher.cpp  main.cpp
examples/main_example/: CMakeLists.txt  main.cpp
examples/main_example/include/: UserCommandContext.h
examples/main_example/src/: UserCommandContext.cpp  main.cpp
examples/render_assets_test/: CMakeLists.txt
examples/render_assets_test/include/: glsl_type_traits.h
examples/render_assets_test/src/: main.cpp
examples/resource_system_test/: CMakeLists.txt
examples/resource_system_test/src/: main.cpp
examples/shader_core_test/: CMakeLists.txt
examples/shader_core_test/shaders/: common.slang  shader_a.slang  shader_b.slang  shader_c.slang
examples/shader_core_test/src/: main.cpp
examples/vkc_examples/: CMakeLists.txt
examples/vkc_examples/001_hello_device/: CMakeLists.txt
examples/vkc_examples/002_hello_context/: CMakeLists.txt
examples/vkc_test/: CMakeLists.txt
libs/vk_core/: CMakeLists.txt  README.md  dependencies.json
libs/window/: CMakeLists.txt  dependencies.cmake  dependencies.json
tests/common/: CMakeLists.txt
tests/containers/: CMakeLists.txt
utilities/core/: CMakeLists.txt  dependencies.json
utilities/enums/: CMakeLists.txt  dependencies.json
utilities/json/: CMakeLists.txt  dependencies.json
utilities/log/: CMakeLists.txt  dependencies.json
(+639 files in other folders)
