project(examples)

add_subdirectory(main_example) 
add_subdirectory(ecs_transform_test)
add_subdirectory(coroutines_test)
add_subdirectory(render_assets_test)
add_subdirectory(resource_system_test) 
add_subdirectory(gpu_driven_benchmark)
add_subdirectory(shader_core_test)
add_subdirectory(vkc_test)
